@@ -17,6 +17,7 @@
   * Using Rails 3.2.0.rc2 and Contour 0.8.0
   * Calendar updated have consistent look across browsers and operating systems
   * Templates can now have default sticky tags assigned to each item
+  * Projects emails can now be fine-tuned to receive only certain types of updates on a per-project basis
 
 * Refactoring
   * qTip2 is now provided by Contour 0.8.0
